--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
     "axios": "^1.6.2",
+    "classnames": "^2.5.1",
     "framer-motion": "^10.16.14",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
