--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "dompurify": "^3.1.2",
     "framer-motion": "^10.16.14",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
