--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "classnames": "^2.5.1",
     "dompurify": "^3.1.2",
     "framer-motion": "^10.16.14",
+    "i18next": "^23.11.5",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "yup": "^1.3.2"
