--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@floating-ui/react": "^0.26.3",
     "@hookform/resolvers": "^3.3.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
+    "D": "^1.0.0",
     "axios": "^1.6.2",
     "classnames": "^2.5.1",
     "dompurify": "^3.1.2",
     "framer-motion": "^10.16.14",
+    "html-to-text": "^9.0.5",
     "i18next": "^23.11.5",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.18.0",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/html-to-text": "^9.0.4",
     "@types/lodash": "^4.14.201",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
