--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
 
     "baseUrl": "."
   },
-  "include": ["src"],
+  "include": ["src", "vitest.setup.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
